# INJA-Templatebuilder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backend/src/: CMakeLists.txt  main.cpp
docs/: snodec-mqttsuite-review.md
public/: app.js  index.html  styles.css
